--- a/index.html
+++ b/index.html
@@ -46,36 +46,37 @@ Happy Valentine’s Day uncle 💖<br><br>
 
 I just wanted to say thank you… really.  
 Thank you for always being there whenever I get stuck with incidents.  
-No matter how many times I ask, you never say no.  
-You always help me patiently — and honestly, you are one of the main reasons I’m still surviving in this project 😌✨  
+      
+<p>No matter how many times I ask, you never say no.  
+You always help me patiently — and honestly, you are one of the main reasons I’m still surviving in this project 😌✨  </p>
 
-You are not just a manager… you are the kind of leader who treats team problems like your own problems.  
-That’s something very rare. And I truly admire that about you.  
+<p>You are not just a manager… you are the kind of leader who treats team problems like your own problems.  
+That’s something very rare. And I truly admire that about you.  </p>
 
-Even though your voice sounds a little scary sometimes 😂  
-I know you are actually a very kind and caring person inside.  
+<p>Even though your voice sounds a little scary sometimes 😂  
+I know you are actually a very kind and caring person inside.  </p>
 
-Also… you and your Dil Pasand situation 🙄  
-You never share it with anyone! Very bad behaviour sir 😤😂  
+<p>Also… you and your Dil Pasand situation 🙄  
+You never share it with anyone! Very bad behaviour sir 😤😂  </p>
 
-And yes… I know I always make you say sorry even when you did nothing wrong.  
+<p>And yes… I know I always make you say sorry even when you did nothing wrong.  
 But I enjoy it too much when you say “sorry” 😌  
-So you have no choice — you must continue saying sorry to me forever.  
+So you have no choice — you must continue saying sorry to me forever.</p>  
 
-I like teasing you… a lot 😈  
+<p>I like teasing you… a lot 😈  
 Making fun of you is one of my favourite hobbies.  
-And honestly, I don’t think I’ll ever stop doing that.  
+And honestly, I don’t think I’ll ever stop doing that.  </p>
 
-Sometimes I get a little jealous also…  
+<p>Sometimes I get a little jealous also…  
 I want you to be close only to me, not to others — not even Raj 😏  
-Don’t ask why… I just don’t like it 😌  
+Don’t ask why… I just don’t like it 😌  </p>
 
-Even if one day we go to different projects…  
+<p>Even if one day we go to different projects…  
 I will never forget you.  
-You will always be my chweeett bajji 🥹💛  
+You will always be my chweeett bajji 🥹💛  </p>
 
-Thank you for guiding me, supporting me, and tolerating me.  
-You are truly the best manager.  
+<p>Thank you for guiding me, supporting me, and tolerating me.  
+You are truly the best manager.  </p>
 
 Luv u my cutiee uncle 💕
 </p>
@@ -86,3 +87,4 @@ Luv u my cutiee uncle 💕
 <script src="script.js"></script>
 </body>
 </html>
+
