--- a/index.html
+++ b/index.html
@@ -47,36 +47,36 @@ Happy Valentine’s Day uncle 💖<br><br>
 I just wanted to say thank you… really.  
 Thank you for always being there whenever I get stuck with incidents.  
       
-<p>No matter how many times I ask, you never say no.  
-You always help me patiently — and honestly, you are one of the main reasons I’m still surviving in this project 😌✨  </p>
+<b>No matter how many times I ask, you never say no.  
+You always help me patiently — and honestly, you are one of the main reasons I’m still surviving in this project 😌✨  </b>
 
-<p>You are not just a manager… you are the kind of leader who treats team problems like your own problems.  
-That’s something very rare. And I truly admire that about you.  </p>
+<b>You are not just a manager… you are the kind of leader who treats team problems like your own problems.  
+That’s something very rare. And I truly admire that about you.  </b>
 
-<p>Even though your voice sounds a little scary sometimes 😂  
-I know you are actually a very kind and caring person inside.  </p>
+<b>Even though your voice sounds a little scary sometimes 😂  
+I know you are actually a very kind and caring person inside.  </b>
 
-<p>Also… you and your Dil Pasand situation 🙄  
-You never share it with anyone! Very bad behaviour sir 😤😂  </p>
+<b>Also… you and your Dil Pasand situation 🙄  
+You never share it with anyone! Very bad behaviour sir 😤😂  </b>
 
-<p>And yes… I know I always make you say sorry even when you did nothing wrong.  
+<b>And yes… I know I always make you say sorry even when you did nothing wrong.  
 But I enjoy it too much when you say “sorry” 😌  
-So you have no choice — you must continue saying sorry to me forever.</p>  
+So you have no choice — you must continue saying sorry to me forever.</b>  
 
-<p>I like teasing you… a lot 😈  
+<b>I like teasing you… a lot 😈  
 Making fun of you is one of my favourite hobbies.  
-And honestly, I don’t think I’ll ever stop doing that.  </p>
+And honestly, I don’t think I’ll ever stop doing that.  </b>
 
-<p>Sometimes I get a little jealous also…  
+<b>Sometimes I get a little jealous also…  
 I want you to be close only to me, not to others — not even Raj 😏  
-Don’t ask why… I just don’t like it 😌  </p>
+Don’t ask why… I just don’t like it 😌  </b>
 
-<p>Even if one day we go to different projects…  
+<b>Even if one day we go to different projects…  
 I will never forget you.  
-You will always be my chweeett bajji 🥹💛  </p>
+You will always be my chweeett bajji 🥹💛  </b>
 
-<p>Thank you for guiding me, supporting me, and tolerating me.  
-You are truly the best manager.  </p>
+<b>Thank you for guiding me, supporting me, and tolerating me.  
+You are truly the best manager.  </b>
 
 Luv u my cutiee uncle 💕
 </p>
@@ -87,4 +87,5 @@ Luv u my cutiee uncle 💕
 <script src="script.js"></script>
 </body>
 </html>
+
 
